--- a/package.json
+++ b/package.json
@@ -1,61 +1,16 @@
 {
   "name": "emoji-game",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "postinstall": "husky install",
-    "format": "prettier .",
-    "format:fix": "pnpm format --write",
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "commitlint": "commitlint"
+    "dev": "concurrently \"pnpm --filter frontend run dev\" \"pnpm --filter backend run dev\"",
+    "build": "pnpm --filter frontend run build && pnpm --filter backend run build"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.400.0",
-    "mongoose": "^8.4.5",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.52.1",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "eslint-config-prettier": "^9.1.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
-    "postcss": "^8",
-    "prettier": "^3.3.2",
-    "prettier-plugin-organize-imports": "^4.0.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  },
-  "lint-staged": {
-    "*.{mjs,js,ts,tsx,md,json,yaml}": [
-      "pnpm eslint . --fix --quiet",
-      "pnpm eslint . --quiet",
-      "pnpm format:fix"
-    ]
+    "concurrently": "^9.1.2"
   }
 }
