--- a/apps/packages/shared/package.json
+++ b/apps/packages/shared/package.json
@@ -2,5 +2,8 @@
   "name": "@monorepo/shared",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc"
+  }
 }
