--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"pnpm --filter frontend run dev\" \"pnpm --filter backend run dev\"",
-    "build": "pnpm --filter frontend run build && pnpm --filter backend run build"
+    "dev": "dotenv -e .env concurrently \"pnpm --filter frontend run dev\" \"pnpm --filter backend run dev\"",
+    "build": "dotenv -e .env pnpm --filter frontend run build && pnpm --filter backend run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "dotenv": "^16.4.7",
+    "dotenv-cli": "^8.0.0"
   }
 }
