--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "dev": "nodemon src/index.ts",
-    "start": "node dist/index.js"
+    "start": "NODE_ENV=production node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,8 @@
     "express": "^4.21.0",
     "express-validator": "^7.2.1",
     "mongoose": "^8.10.1",
+    "next": "15.2.0",
+    "next-transpile-modules": "^10.0.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
