--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,12 +20,14 @@
     "mongoose": "^8.10.1",
     "next": "15.2.0",
     "next-transpile-modules": "^10.0.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.7.2",
+    "@types/ws": "^8.18.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
